<resources>
    <string name="app_name">Tempest</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Welcome to Tempest</string>
    <string name="home_description">The exercise app used to schedule your next running workout!</string>
    <string name="app_description1">Exercise Preferences</string>
    <string name="max_temp">Max Temperature</string>
    <string name="hint_high">High</string>
    <string name="low_temp">Lowest Temperature</string>
    <string name="hint_low">Low</string>
    <string name="go_back">Edit Preferences</string>

    <string name="message_one">Run Today</string>
    <string name="message_two">Dont Run Today</string>
    <string name="message_three">Maybe Run Today</string>
    <string name="current_temp">10 Degrees</string>
    <string name="current_humidity">10%</string>
    <string name="current_precipitation">10%</string>
    <string name="day_one">Day One</string>
    <string name="day_two">Day Two</string>
    <string name="day_three">Day Three</string>
    <string name="day_four">Day Four</string>
    <string name="day_five">Day Five</string>
    <string name="day_six">Day Six</string>
    <string name="day_seven">Day Seven</string>
    <string name="preferred_time">Pefered Times</string>
    <string name="logo_desc">Logo</string>
    <!-- Drop Down -->
    <string-array name="prefered_times">
        <item>Any Time</item>
        <item>Morning (5:00 - 11:59)</item>
        <item>Afternoon (12:00 - 15:59)</item>
        <item>Evening (16:00 - 22:00)</item>
    </string-array>



</resources>
